-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8.1
-
9940f3f28 (dev), 0479ef1c1 (6.9), da6bd3863 (6.8), 84b5b0543 (tqtc/lts-6.5)
To reproduce, run attached example and click the button.
It crashes inside QWindowContainer::parentWasMoved where it touches window object without testing if it is null.
For Gerrit Dashboard: QTBUG-133289 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
620815,2 | Fix crash cases where window container tries to touch destroyed window | dev | qt/qtbase | Status: MERGED | +2 | 0 |
621120,2 | Fix crash cases where window container tries to touch destroyed window | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
621265,2 | Fix crash cases where window container tries to touch destroyed window | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |
621319,2 | Fix crash cases where window container tries to touch destroyed window | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |